--- a/ps01/style.css
+++ b/ps01/style.css
@@ -2,3 +2,12 @@ body {
     color: white;
     background-color: rgb(66, 119, 66);
 }
+
+article {
+    background-color: green;
+    border-radius: 10px;
+    box-shadow: 0 0 0 5px rgba(0, 0, 0, 0.3);
+    width: 400px;
+    padding: 10px;
+    margin: 20px;
+}
